--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,6 @@ html, body {
   font-size: 14px;
   white-space: normal; /* Wrap long lines */
   word-break:break-word;  /* Break long words if necessary*/
-  background-color: #222;
+  background-color: #302f2f;
   font-family: monospace; /* code-like font */
 }
