--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,37 @@ html, body {
   font: inherit;                
   color: black;               
 }
+/* Content component */
+.content {
+  background-color: #2b2828;
+  height: 100%; /* Ensure the content takes up all available space */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Create 3 equal columns */
+  grid-auto-rows: 600px; /* Set a fixed height for each row */
+  grid-gap: 1px; /* Space between grid items */
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding: 10px; /* Optional: add padding inside content area */
+  white-space: nowrap; /* Prevent wrapping of items */
+}
+
+.grid-item {
+  width: 500px;
+  height: 500px;
+  background-color: #3f3a3a;
+  color: white;  
+}
+
+.grid-item h1 {
+  text-align: center;
+  font-family: monospace;
+  font-size: 26px;
+}
+
+.grid-item p {
+  font-family: monospace;
+  font-size: 14px;
+  white-space: normal; /* Wrap long lines */
+  word-break:break-word;  /* Break long words if necessary*/
+  background-color: #302f2f;
+  font-family: monospace; /* code-like font */
+}
